--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.three_scene {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.main_navbar {
+  position: relative;
+  z-index: 2;
+}
+
+.footer-container {
+  position: relative;
+  z-index: 2;
+}
