--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,17 @@
   }
 }
 
+* {
+  background-color: black;
+}
+
 .three_scene {
   z-index: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
+
   width: 100%;
-  height: 100%;
+  height: 90vh;
+  border-radius: 50% 50%;
+  overflow: hidden; /* to hide any overflow from the canvas */
 }
 .main_navbar {
   position: relative;
