Star Modal Update work-in-progress

--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,15 @@
 * {
   background-color: black;
 }
+.close-icon-white .close {
+  color: white;
+}
 
 .three_scene {
   z-index: 1;
 
   width: 100%;
-  height: 85vh;
+  height: 87vh;
   border-radius: 50% 50%;
   overflow: hidden; /* to hide any overflow from the canvas */
 }
