--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,99 @@
   position: relative;
   z-index: 2;
 }
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  overflow: hidden;
+}
+
+li {
+  display: block;
+  overflow: hidden;
+}
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0px;
+}
+
+.info {
+  position: relative;
+  z-index: 2;
+  color: white;
+  width: 500px;
+  border-left: 1px solid black;
+  padding-left: 40px;
+  user-select: none;
+}
+
+.info p {
+  font-size: 15px;
+  line-height: 1.25em;
+  margin-bottom: 0.2em;
+}
+
+.accent {
+  -webkit-text-stroke: 2px white;
+  font-size: 0.8em !important;
+
+  color: transparent;
+}
+
+.coord {
+  display: inline-block;
+  font-family: "Major Mono Display", monospace;
+  background: black;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.info h1 {
+  font-family: "Major Mono Display", monospace;
+  font-size: 1em;
+  margin-bottom: 0.5em;
+}
+
+.info h3 {
+  font-weight: 800;
+  font-size: 4em;
+  letter-spacing: -4px;
+  line-height: 1em;
+  margin: 0;
+}
+
+.info h4 {
+  font-weight: 300;
+  font-size: 1.15em;
+  letter-spacing: -1px;
+  margin: 10px 0;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+a {
+  color: white;
+}
+
+a {
+  pointer-events: all;
+  color: black;
+  text-decoration: none;
+}
+
+svg {
+  fill: black;
+  width: 52px !important;
+}
