--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,14 @@
   z-index: 1;
 
   width: 100%;
-  height: 87vh;
+  height: 80vh;
   border-radius: 50% 50%;
   overflow: hidden; /* to hide any overflow from the canvas */
 }
 .main_navbar {
   position: relative;
   z-index: 2;
+  background-color: transparent;
 }
 
 .footer-container {
