--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ li {
   padding: 5px 10px;
   border-radius: 5px;
 
-  font-size: 13px !important;
+  font-size: 0.7em !important;
 }
 
 .info h3 {
