--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,9 @@ body {
 .close-icon-white .close {
   color: white;
 }
+.hCpHso .selected {
+  background-color: black !important;
+}
 
 .three_scene {
   z-index: 1;
